--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -16,32 +16,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/calendarButton"
-            android:layout_width="148dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:contentDescription="@string/calendar_button_description"
-            app:srcCompat="@android:drawable/ic_menu_my_calendar"
-            tools:ignore="TouchTargetSizeCheck" />
-
-        <TextView
-            android:id="@+id/dateText"
-            android:layout_width="250dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:ems="10"
-            android:inputType="date"
-            android:text="2022-03-15"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:translationY="6dp"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvMoodDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:ems="10"
+                android:inputType="date"
+                android:text="2022-03-15"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:translationY="6dp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/tvMoodTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:ems="10"
+                android:inputType="time"
+                android:text="12:00"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
         <EditText
-            android:id="@+id/moodText"
+            android:id="@+id/etMoodRating"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -53,7 +63,7 @@
             android:textColor="@color/black" />
 
         <EditText
-            android:id="@+id/activityText"
+            android:id="@+id/etActivityText"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
