--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,8 +109,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clNumberPicker"
-        android:layout_width="200dp"
-        android:layout_height="400dp"
+        android:layout_width="250dp"
+        android:layout_height="330dp"
+        android:background="@color/black"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,24 +122,28 @@
             android:id="@+id/npNumberPicker"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:background="@color/black"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:background="#323131"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvNpMoodPicker" />
 
         <TextView
             android:id="@+id/tvNpMoodPicker"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_width="170dp"
+            android:layout_height="42dp"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text="@string/welcome_text"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/white"
             android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="@+id/npNumberPicker"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
