--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="293dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:orientation="vertical">
@@ -53,10 +53,11 @@
 
         <TextView
             android:id="@+id/tvMoodRating"
-            android:layout_width="150dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:ems="10"
+            android:gravity="center_vertical"
             android:inputType="number"
             android:text="5"
             android:textAlignment="center"
