--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -66,18 +66,18 @@
             android:textSize="24sp"
             tools:ignore="TouchTargetSizeCheck" />
 
-        <EditText
+        <TextView
             android:id="@+id/etActivityText"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:ems="10"
+            android:gravity="center_vertical"
             android:inputType="textPersonName"
             android:text="activity"
-            android:textAlignment="inherit"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/black"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
