--- a/app/src/main/res/layout/activity_trend_view.xml
+++ b/app/src/main/res/layout/activity_trend_view.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
+        android:background="#4E4E4E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
