--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@color/white"
+        android:background="@drawable/activity_row_rounded_corner"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
