Auto sizing added to activities textview (with a max size) and removed surrounding brackets when converting from array to string

--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -70,10 +70,12 @@
             android:id="@+id/etActivityText"
             android:layout_width="200dp"
             android:layout_height="match_parent"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="16sp"
             android:ems="10"
             android:gravity="center_vertical"
-            android:inputType="textPersonName"
             android:text="activity"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
