Cleaning up mood_entry_layout and making it look prettier Added colouring for mood severity

--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -25,26 +25,21 @@
             <TextView
                 android:id="@+id/tvMoodDate"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_height="match_parent"
                 android:ems="10"
-                android:inputType="date"
-                android:text="2022-03-15"
+                android:text="@string/default_date"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/black"
-                android:textSize="18dp"
-                android:translationY="6dp"
+                android:textSize="18sp"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/tvMoodTime"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_height="match_parent"
                 android:ems="10"
-                android:inputType="time"
-                android:text="12:00"
+                android:text="@string/default_time"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/black"
@@ -56,10 +51,10 @@
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:background="@drawable/mood_rating_colour_high"
             android:ems="10"
             android:gravity="center_vertical"
-            android:inputType="number"
-            android:text="5"
+            android:text="@string/default_mood"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/black"
@@ -72,11 +67,10 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:autoSizeTextType="uniform"
             android:autoSizeMaxTextSize="16sp"
+            android:autoSizeTextType="uniform"
             android:ems="10"
             android:gravity="center_vertical"
-            android:text="activity"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/black" />
