--- a/app/src/main/res/layout/activities_recycle_view.xml
+++ b/app/src/main/res/layout/activities_recycle_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
@@ -12,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="Choose your activities"
+        android:text="@string/activities_choose"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +36,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:textAlignment="center"
+        android:baselineAligned="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -48,7 +46,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
             android:orientation="vertical"
             android:textAlignment="center">
 
@@ -56,7 +53,7 @@
                 android:id="@+id/tvSelected"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Selected"
+                android:text="@string/activities_selected"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -75,7 +72,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
             android:orientation="vertical"
             android:textAlignment="center">
 
@@ -83,7 +79,7 @@
                 android:id="@+id/tvAvailable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Available"
+                android:text="@string/activities_available"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
