Added ability to add new activities, and adjusted the auto-layout of some text boxes

--- a/app/src/main/res/layout/activities_recycle_view_row.xml
+++ b/app/src/main/res/layout/activities_recycle_view_row.xml
@@ -9,10 +9,13 @@
     <LinearLayout
         android:id="@+id/clBorder"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/activity_row_rounded_corner"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,11 +23,13 @@
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="4dp"
+            android:layout_weight="2"
+            android:autoSizeTextType="uniform"
             android:gravity="center_vertical"
             android:text="@string/activities_name"
             android:textAlignment="center"
@@ -36,7 +41,7 @@
             android:layout_width="24dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:background="@drawable/activities_recycle_view_row_cross"
             android:contentDescription="@string/activities_delete"
             android:gravity="center_vertical"
