--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -65,7 +65,7 @@
             android:id="@+id/etActivityText"
             android:layout_width="200dp"
             android:layout_height="match_parent"
-            android:layout_marginEnd="5dp"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:autoSizeMaxTextSize="16sp"
             android:autoSizeTextType="uniform"
