--- a/app/src/main/res/layout/filter_entry_layout.xml
+++ b/app/src/main/res/layout/filter_entry_layout.xml
@@ -15,9 +15,11 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/activity_row_rounded_corner"
-        android:gravity="center_vertical"
+        android:backgroundTint="#BDBABA"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/main_row_filter_title"
         android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
