--- a/app/src/main/res/layout/filter_entry_layout.xml
+++ b/app/src/main/res/layout/filter_entry_layout.xml
@@ -3,23 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="30dp"
     android:layout_margin="5dp">
 
     <TextView
         android:id="@+id/tvFilterTitle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/activity_row_rounded_corner"
         android:backgroundTint="#BDBABA"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/main_row_filter_title"
         android:textColor="@color/black"
-        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
