--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -83,5 +83,18 @@
                 android:textSize="16sp" />
 
         </LinearLayout>
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/bSettingsConfirm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/confirm_change"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/llSettings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
