Quickfix - introduced an error when i changed how AvailableActivities was read as json Added in expanded GUI item names

--- a/app/src/main/res/layout/activities_recycle_view.xml
+++ b/app/src/main/res/layout/activities_recycle_view.xml
@@ -171,14 +171,14 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <Button
-            android:id="@+id/bConfirm"
+            android:id="@+id/bActivitiesConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/confirm_change" />
 
         <Button
-            android:id="@+id/bDelete"
+            android:id="@+id/bActivitiesDelete"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
